# milky

./: .flake8  .gitignore  .pre-commit-config.yaml  .python-version  mkdocs.yml  noxfile.py  pyproject.toml
.github/workflows/: tests.yaml
docs/: index.md
src/milky/: __init__.py  _docs.py  cache.py  datatypes.py  models.py  root.py  rtmtypes.py  transport.py
tests/: __init__.py  conftest.py  test_cache.py  test_milky.py  test_models.py  test_transport.py
tests/cassettes/test_models/: TestLists.test_add_and_delete_list.yaml  TestLists.test_add_list_fails.yaml  TestLists.test_list_attributes.yaml  TestLists.test_list_rename.yaml  TestLists.test_list_the_lists.yaml  test_settings.yaml
tests/cassettes/test_transport/: TestCassetteCredentials.test_logged_in.yaml  TestClient.test_server_error.yaml  TestTransport.test_bad_frob.yaml  TestTransport.test_bad_token.yaml  TestTransport.test_bad_token_json.yaml  TestTransport.test_desktop_auth.yaml  TestTransport.test_given_token.yaml  TestTransport.test_given_token_json.yaml  TestTransport.test_invalid_api_key.yaml  TestTransport.test_invalid_signature.yaml  TestTransport.test_invoke_with_token.yaml
tests/typing/: test_model_types.yaml
