[tool.poetry]
name = "milky"
version = "0.1.0"
description = ""
authors = ["Allan Crooks <allan@sixtyten.org>"]

[tool.poetry.dependencies]
python = ">= 3.8, < 4"
cached-property = "^1.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-recording = "*"
coverage = {extras = ["toml"], version = "*"}
pytest-cov = "*"
requests = "*"
httpx = "*"
defusedxml = "*"
mypy = "^0.961"
flakeheaven = "^2.0.0"
flake8-warnings = "^0.2.1"
dlint = "^0.12.0"
flake8-bandit = "^3.0.0"
flake8-use-fstring = "^1.3"
flake8-expression-complexity = "^0.0.11"
flake8-noqa = "^1.2.5"
flake8-cognitive-complexity = "^0.1.0"
pytype = { version = "^2022.6.23", python = ">=3.8,<3.11" }
typeguard = "^2.13.3"
typing-extensions = "^4.2.0"
mkdocs = "^1.3.0"
mkdocstrings = {extras = ["python"], version = "*"}
mkdocs-material = "^8.3.8"
ruff = "^0.0.282"
vcrpy = {git = "https://github.com/the-allanc/vcrpy.git", rev = "httpx-cassette-compatibility"}
ipython = "8.12.1"
ipdb = "^0.13.13"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["milky"]

[tool.coverage.report]
show_missing = true

[tool.black]
skip-string-normalization = true

[tool.flakeheaven.plugins]
pycodestyle = ["+*"]
pyflakes = ["+*"]
pylint = ["+*"]
flake8-warnings = ["+*"]
dlint = ["+*"]
flake8-bandit = ["+*", "-S101", "-S303"]
flake8-use-fstring = ["+*"]
flake8-cognitive-complexity = ["+*"]
flake8-expression-complexity = ["+*"]
flake8-noqa = ["+*"]

[tool.flakeheaven]
format = "grouped"
show_source = true
extend_select = ["B9"]
docstring_convention = "google"

[tool.mypy]

[[tool.mypy.overrides]]
module = "defusedxml.etree"
ignore_missing_imports = true

[tool.ruff]
select = ["ALL"]
ignore = ["Q", "COM", "EM101", "TRY003", "ANN101", "FBT", "D105", "A003", "ANN204", "D", "C408"]
target-version = "py38"

[tool.ruff.per-file-ignores]
"noxfile.py" = ["ANN", "D"]
"src/milky/_docs.py" = ["ANN"]
"tests/conftest.py" = ["ARG001"]
"tests/*.py" = ["ANN", "D", "S101", "RUF015"]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
