[project]
requires-python = ">= 3.10"

[tool.poetry]
name = "milky"
version = "0.1.0"
description = ""
authors = ["Allan Crooks <allan@sixtyten.org>"]

[tool.poetry.dependencies]
python = ">= 3.10, < 4"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-recording = "*"
coverage = {extras = ["toml"], version = "*"}
pytest-cov = "*"
requests = "*"
httpx = "*"
mypy = "*"
flakeheaven = "*"
flake8 = "^4.0.1" # Flakeheaven doesn't support later versions yet: https://github.com/PyCQA/flake8/issues/1635
dlint = "*"
flake8-use-fstring = "*"
flake8-warnings = "*"
flake8-expression-complexity = "*"
flake8-noqa = "*"
flake8-cognitive-complexity = "*"
pytype = "*"
mkdocs = "*"
mkdocstrings = {extras = ["python"], version = "*"}
mkdocs-material = "*"
ruff = "*"
ipython = "*"
ipdb = "*"
vcrpy = "*"
urllib3 = "^1.26.20" # Until this is merged in - https://github.com/python-poetry/poetry-plugin-export/pull/286

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["milky"]

[tool.coverage.report]
show_missing = true

[tool.black]
skip-string-normalization = true

[tool.flakeheaven.plugins]
pylint = ["+*"] # https://github.com/astral-sh/ruff/issues/970
flake8-warnings = ["+*"]
dlint = ["+*"]
flake8-use-fstring = ["+*"]
flake8-cognitive-complexity = ["+*"]
flake8-expression-complexity = ["+*"]
flake8-noqa = ["+*"]

[tool.flakeheaven]
format = "grouped"
show_source = true
extend_select = ["B9"]
docstring_convention = "google"

[tool.lint]
target-version = "py38"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["Q", "COM", "EM", "TRY003", "ANN101", "FBT", "D105", "A003", "ANN204", "ANN401", "D", "C408", "I001", "RUF100", "E501", "S101"]

[tool.ruff.lint.per-file-ignores]
"noxfile.py" = ["ANN", "D"]
"src/milky/_docs.py" = ["ANN"]
"tests/conftest.py" = ["ARG001"]
"tests/*.py" = ["ANN", "D", "S101", "RUF015"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
